k8s-cluster-configuration/applications/ghostwrite/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghostwrite-service
  namespace: ghostwrite
spec:
  selector:
    app: ghostwrite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
