k8s-cluster-configuration/applications/ghostwrite/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ghostwrite-gateway
  namespace: ghostwrite
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "bettercalldenis.com,www.bettercalldenis.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: bettercalldenis.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: ghostwrite-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-www
      protocol: HTTPS
      port: 8443
      hostname: www.bettercalldenis.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: ghostwrite-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostwrite
  namespace: ghostwrite
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ghostwrite-gateway
      namespace: ghostwrite
  hostnames:
    - bettercalldenis.com
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: ghostwrite-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostwrite-www-redirect
  namespace: ghostwrite
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ghostwrite-gateway
      namespace: ghostwrite
  hostnames:
    - www.bettercalldenis.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: bettercalldenis.com
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
